헤더 색깔 변경

--- a/css/style.css
+++ b/css/style.css
@@ -836,26 +836,9 @@ fieldset {
     width: 100%;
     height: auto; }
 
-.box1 {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 8%;
-  height: 100%;
-  background: #ffd1d5;
-  z-index: 1; }
-
-.box2 {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 13%;
-  background: #ffd1d5;
-  z-index: 1; }
-
 #header {
   width: 100%;
-  background: #fdf3f0; }
+  background: #fff; }
   #header .inner {
     width: 1180px;
     height: 100px;
@@ -863,10 +846,10 @@ fieldset {
     position: relative; }
     #header .inner > h1 {
       position: absolute;
-      left: -5%;
+      left: 0%;
       bottom: 15px; }
       #header .inner > h1 a {
-        font: bold 25px/1 "STIX Two Text";
+        font: 300 25px/1 "Spartan";
         color: #111; }
     #header .inner .menuWeb #gnb {
       position: absolute;
@@ -1002,7 +985,7 @@ fieldset {
   overflow: hidden;
   position: relative;
   background: #fdf3f0; }
-  #visual img:nth-of-type(1) {
+  #visual img {
     width: 30%;
     height: 90%;
     object-fit: cover;
@@ -1010,15 +993,6 @@ fieldset {
     position: absolute;
     right: 11%;
     top: 5%;
-    z-index: 1; }
-  #visual img:nth-of-type(2) {
-    width: 150px;
-    height: 230px;
-    object-fit: cover;
-    transition: 0.5s;
-    position: absolute;
-    left: 45%;
-    bottom: 9%;
     z-index: 1; }
   #visual .inner {
     width: 1180px;
@@ -1131,7 +1105,7 @@ fieldset {
     margin: 0 auto;
     position: relative; }
     #brand .inner h1 {
-      font: bold 24px "STIX Two Text";
+      font: bold 24px "Spartan";
       color: #555;
       text-align: center;
       margin-bottom: 50px;
@@ -1265,7 +1239,7 @@ fieldset {
     width: 1180px;
     margin: 0 auto; }
     #banner .inner h1 {
-      font: bold 30px "STIX Two Text";
+      font: bold 30px "Spartan";
       color: #fff;
       text-align: center;
       margin-bottom: 30px; }
@@ -1282,7 +1256,7 @@ fieldset {
     width: 1180px;
     margin: 0 auto; }
     #comment .inner h1 {
-      font: bold 20px "STIX Two Text";
+      font: bold 20px "Spartan";
       color: #555;
       text-align: center;
       margin-bottom: 30px;
