--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;700&display=swap");
 * {
   margin: 0;
@@ -849,12 +849,12 @@ fieldset {
       left: 0%;
       bottom: 15px; }
       #header .inner > h1 a {
-        font: 300 25px/1 "Spartan";
+        font: 500 25px/1 "Spartan";
         color: #111; }
     #header .inner .menuWeb #gnb {
       position: absolute;
-      bottom: 3px;
-      right: 0%; }
+      bottom: 10%;
+      right: 15%; }
       #header .inner .menuWeb #gnb::after {
         content: "";
         display: block;
@@ -863,8 +863,8 @@ fieldset {
         float: left; }
         #header .inner .menuWeb #gnb li a {
           display: block;
-          padding: 20px 20px;
-          font: bold 13px/1 "STIX Two Text";
+          padding: 10px 10px;
+          font: 400 12px/1 "Spartan";
           color: #111;
           transition: 0.5s;
           box-sizing: border-box;
@@ -874,18 +874,18 @@ fieldset {
           box-sizing: border-box; }
     #header .inner .menuWeb .util {
       position: absolute;
-      top: 14vh;
-      right: -9vw;
-      z-index: 2; }
+      top: 10PX;
+      right: 0px; }
       #header .inner .menuWeb .util::after {
         content: "";
         display: block;
         clear: both; }
       #header .inner .menuWeb .util li {
+        float: left;
         margin-bottom: 30px; }
         #header .inner .menuWeb .util li a {
           display: block;
-          font: bold 13px/1 "STIX Two Text";
+          font: 400 13px/1 "Spartan";
           color: #111;
           padding: 0 10px;
           transition: 0.5s;
@@ -897,9 +897,10 @@ fieldset {
     #header .inner .btnCall {
       position: absolute;
       top: 20%;
-      right: -11%;
+      right: 0;
       width: 20px;
-      height: 20px; }
+      height: 20px;
+      display: none; }
       #header .inner .btnCall::before {
         content: "";
         display: block;
@@ -982,18 +983,13 @@ fieldset {
 #visual {
   width: 100%;
   height: calc(100vh - 120px);
+  background-image: url(../img/br6.jpg);
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
   overflow: hidden;
-  position: relative;
-  background: #fdf3f0; }
-  #visual img {
-    width: 30%;
-    height: 90%;
-    object-fit: cover;
-    transition: 0.5s;
-    position: absolute;
-    right: 11%;
-    top: 5%;
-    z-index: 1; }
+  object-fit: cover;
+  position: relative; }
   #visual .inner {
     width: 1180px;
     height: 100%;
