--- a/css/style.css
+++ b/css/style.css
@@ -849,7 +849,7 @@ fieldset {
       left: 0%;
       bottom: 25%; }
       #header .inner > h1 a {
-        font: 500 25px/1 "Spartan";
+        font: bold 25px/1 "Spartan";
         color: #111; }
     #header .inner .menuWeb #gnb {
       position: absolute;
@@ -880,7 +880,7 @@ fieldset {
             height: 100%;
             background: #e0e0e0; }
         #header .inner .menuWeb #gnb li:hover a {
-          color: #dfc16d; }
+          color: #d8778f; }
     #header .inner .menuWeb .util {
       position: absolute;
       bottom: 20%;
@@ -1307,38 +1307,69 @@ fieldset {
 #footer {
   width: 100%;
   padding: 100px 0;
-  background: #dbadb1; }
+  background: #efefef; }
   #footer .inner {
-    width: 1180px;
-    margin: 0 auto; }
-    #footer .inner::after {
-      content: "";
-      display: block;
-      clear: both; }
-    #footer .inner h1 {
-      font: bold 24px/1 "arial";
-      color: #666;
-      float: left; }
-    #footer .inner ul {
-      float: right; }
-      #footer .inner ul li {
+    width: 1330px;
+    margin: 0 auto;
+    position: relative; }
+    #footer .inner .wrap {
+      width: 100%; }
+      #footer .inner .wrap::after {
+        content: "";
+        display: block;
+        clear: both; }
+      #footer .inner .wrap article {
+        width: 20%;
+        height: 200px;
+        padding: 10px 20px;
+        margin-right: 20px;
         float: left;
-        margin-left: 20px; }
-        #footer .inner ul li a {
-          font: bold 14px/1 "arial";
-          color: #666; }
-    #footer .inner address {
-      width: 100%;
-      float: left;
-      font: 14px/1.3 "arial";
-      color: #777;
-      margin-bottom: 20px;
-      margin-top: 20px; }
-    #footer .inner p {
-      font: 12px/1 "arial";
-      color: #777;
-      width: 100%;
-      float: left; }
+        position: relative; }
+        #footer .inner .wrap article:nth-of-type(3) {
+          width: 10%; }
+        #footer .inner .wrap article:nth-of-type(4) {
+          margin-right: 0px;
+          width: 31%; }
+        #footer .inner .wrap article .menu {
+          font: 400 14px/1 'arial';
+          color: #333;
+          padding-bottom: 15px;
+          margin-bottom: 20px;
+          border-bottom: 1px solid #aaa; }
+        #footer .inner .wrap article p {
+          font: 300 13px/1.5 'arial';
+          color: #3c3c3b;
+          margin-bottom: 20px; }
+          #footer .inner .wrap article p:last-child {
+            margin-top: 30px;
+            font-size: 12px;
+            color: #222; }
+          #footer .inner .wrap article p a {
+            font: 400 15px/1.1 'arial';
+            color: #222; }
+        #footer .inner .wrap article:nth-of-type(1) span {
+          display: block;
+          margin-bottom: 20px;
+          font: normal 19px/1 'arial'; }
+        #footer .inner .wrap article:nth-of-type(3) span a {
+          display: block;
+          margin-bottom: 20px;
+          font: bold 13px/1 'arial';
+          color: #222; }
+      #footer .inner .wrap .box4 p:nth-of-type(2) {
+        font: 12px/1.5 'arial'; }
+      #footer .inner .wrap .box4 a {
+        display: inline-block;
+        text-align: center;
+        padding: 5px 20px;
+        height: 35px;
+        border: 1px solid #888;
+        font-size: 13px;
+        line-height: 35px;
+        color: #333;
+        margin-right: 15px; }
+        #footer .inner .wrap .box4 a img {
+          margin: 0 auto; }
 
 @media screen and (max-width: 1179px) {
   #header .inner {
