--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,7 @@ $mobile: 539px;
 			bottom: 25%;
 
 			a {
-				font: 500 25px/1 "Spartan";
+				font: bold 25px/1 "Spartan";
 				color: #111;
 			}
 		}
@@ -77,7 +77,7 @@ $mobile: 539px;
 					}
 
 					&:hover a {
-						color: rgb(223, 193, 109);
+						color: rgb(216, 119, 143);
 					}
 				}
 			}
@@ -104,7 +104,7 @@ $mobile: 539px;
 						transition: 0.5s;
 						text-align: center;
 					}
-					
+
 					&:last-child a {
 						width: 30%;
 						position: absolute;
@@ -115,7 +115,6 @@ $mobile: 539px;
 						font-family: "Spartan";
 						line-height: 15px;
 						border-right: none;
-
 					}
 				}
 			}
@@ -659,46 +658,102 @@ $mobile: 539px;
 #footer {
 	width: 100%;
 	padding: 100px 0;
-	background: rgb(219, 173, 177);
+	background: #efefef;
 	.inner {
-		width: 1180px;
+		width: 1330px;
 		margin: 0 auto;
+		position: relative;
 
-		&::after {
-			content: "";
-			display: block;
-			clear: both;
-		}
-		h1 {
-			font: bold 24px/1 "arial";
-			color: #666;
-			float: left;
-		}
-		ul {
-			float: right;
-			li {
+		.wrap {
+			width: 100%;
+
+			&::after {
+				content: "";
+				display: block;
+				clear: both;
+			}
+			article {
+				
+				width: 20%;
+				height: 200px;
+				padding: 10px 20px;
+				margin-right: 20px;
 				float: left;
-				margin-left: 20px;
+				position: relative;
+				
+				&:nth-of-type(3) {
+					width: 10%;
+				}
+				&:nth-of-type(4) {
+					margin-right: 0px;
+					width: 31%;
+				}
 
-				a {
-					font: bold 14px/1 "arial";
-					color: #666;
+				.menu {
+					font: 400 14px/1 'arial';
+					color: #333;
+					padding-bottom: 15px;
+					margin-bottom: 20px;
+					border-bottom: 1px solid #aaa;
+				}
+				p{
+					font: 300 13px/1.5 'arial';
+					color: #3c3c3b;
+					margin-bottom: 20px;
+
+
+					&:last-child {
+						margin-top: 30px;
+						font-size: 12px;
+						color: #222;
+					}
+
+					a{
+						font: 400 15px/1.1 'arial';
+						color: #222;
+					
+					}
+				}
+				&:nth-of-type(1) span {
+					display: block;
+					margin-bottom: 20px;
+					font: normal 19px/1 'arial';
+					
+				}
+				&:nth-of-type(3) span a{
+					display: block;
+					margin-bottom: 20px;
+					font: bold 13px/1 'arial';
+					color: #222;
+					
 				}
 			}
-		}
-		address {
-			width: 100%;
-			float: left;
-			font: 14px/1.3 "arial";
-			color: #777;
-			margin-bottom: 20px;
-			margin-top: 20px;
-		}
-		p {
-			font: 12px/1 "arial";
-			color: #777;
-			width: 100%;
-			float: left;
+			.box4{
+				p {
+					&:nth-of-type(2){
+						font: 12px/1.5 'arial';
+					}
+				}
+				a{
+					display: inline-block;
+					text-align: center;
+					padding: 5px 20px;
+					height: 35px;
+					border: 1px solid #888;
+					font-size: 13px;
+					line-height: 35px;
+					color: #333;
+					margin-right: 15px;
+					
+
+					img{
+						margin: 0 auto;
+						
+						
+					}
+
+				}
+			}
 		}
 	}
 }
