--- a/scss/style.scss
+++ b/scss/style.scss
@@ -237,7 +237,7 @@ $mobile: 539px;
 #visual {
 	width: 100%;
 	height: calc(100vh - 120px);
-	background-image: url(../img/br6.jpg);
+	background-image: url(../img/br8.jpg);
 	background-color: #fff;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -659,6 +659,7 @@ $mobile: 539px;
 	width: 100%;
 	padding: 100px 0;
 	background: #efefef;
+	position: relative;
 	.inner {
 		width: 1330px;
 		margin: 0 auto;
@@ -673,14 +674,13 @@ $mobile: 539px;
 				clear: both;
 			}
 			article {
-				
 				width: 20%;
 				height: 200px;
 				padding: 10px 20px;
 				margin-right: 20px;
 				float: left;
 				position: relative;
-				
+
 				&:nth-of-type(3) {
 					width: 10%;
 				}
@@ -689,52 +689,47 @@ $mobile: 539px;
 					width: 31%;
 				}
 
+				&:nth-of-type(1) span {
+					display: block;
+					margin-bottom: 20px;
+					font: normal 19px/1 "arial";
+				}
+				&:nth-of-type(3) span a {
+					display: block;
+					margin-bottom: 20px;
+					font: bold 13px/1 "arial";
+					color: #222;
+				}
 				.menu {
-					font: 400 14px/1 'arial';
+					font: 400 14px/1 "arial";
 					color: #333;
 					padding-bottom: 15px;
 					margin-bottom: 20px;
 					border-bottom: 1px solid #aaa;
 				}
-				p{
-					font: 300 13px/1.5 'arial';
+				p {
+					font: 300 13px/1.5 "arial";
 					color: #3c3c3b;
 					margin-bottom: 20px;
-
 
 					&:last-child {
 						margin-top: 30px;
 						font-size: 12px;
 						color: #222;
 					}
-
-					a{
-						font: 400 15px/1.1 'arial';
+					a {
+						font: 400 15px/1.1 "arial";
 						color: #222;
-					
 					}
-				}
-				&:nth-of-type(1) span {
-					display: block;
-					margin-bottom: 20px;
-					font: normal 19px/1 'arial';
-					
-				}
-				&:nth-of-type(3) span a{
-					display: block;
-					margin-bottom: 20px;
-					font: bold 13px/1 'arial';
-					color: #222;
-					
 				}
 			}
-			.box4{
+			.box4 {
 				p {
-					&:nth-of-type(2){
-						font: 12px/1.5 'arial';
+					&:nth-of-type(2) {
+						font: 12px/1.5 "arial";
 					}
 				}
-				a{
+				>a {
 					display: inline-block;
 					text-align: center;
 					padding: 5px 20px;
@@ -744,17 +739,22 @@ $mobile: 539px;
 					line-height: 35px;
 					color: #333;
 					margin-right: 15px;
-					
 
-					img{
-						margin: 0 auto;
-						
-						
+					img {
+						max-width: 100%;
+						height: auto;
 					}
-
 				}
 			}
 		}
+	}
+	.list {
+		width: 100%;
+		background: #bdbdbd;
+		padding: 17px 0;
+		position: absolute;
+		bottom: 0;
+		left: 0;
 	}
 }
 
